--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
     "lottie-react": "^2.4.1",
     "next": "15.3.1",
     "react": "^19.0.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
